--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -18,4 +18,11 @@ body {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.7;
+    color: #777;
+}
+
+.header {
+    height: 95vh;
+    background-image: url(../img/hero.jpg);
+    background-size: cover;
 }
