--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -62,6 +62,8 @@ body {
     color: #FFF;
     text-transform: uppercase;
 
+    /* Fixes the shaking in the animation */
+    backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -70,8 +72,7 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
-    animation-name: moveInLeft;
-    animation-duration: 0.5s;
+    animation: moveInLeft 1s ease-out;
 }
 
 .heading-primary-sub {
@@ -79,6 +80,7 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+    animation: moveInRight 1s ease-out;
 }
 
 @keyframes moveInLeft {
@@ -86,9 +88,29 @@ body {
         opacity: 0;
         transform: translateX(-100px);
     }
+    
+    /* 60% {
+        transform: translateX(-100px) rotate(-50deg);
+    } */
 
     80% {
-        transform: translateX(20px);
+        transform: translateX(10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+
+    80% {
+        transform: translateX(-10px);
     }
 
     100% {
