finish animation button

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -56,6 +56,8 @@ body {
     left: 50%;
     /* we need to translate the center of the box into the current left of the box */
     transform: translate(-50%, -50%);
+    /* to align the button in the center */
+    text-align: center;
 }
 
 .heading-primary {
@@ -64,6 +66,7 @@ body {
 
     /* Fixes the shaking in the animation */
     backface-visibility: hidden;
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -117,4 +120,30 @@ body {
         opacity: 1;
         transform: translate(0);
     }
+}
+
+/* pseudo class allows us to define a certain state or condition */
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px;
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
